modify jvm param